--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,18 @@
   color: #61dafb;
 }
 
+.commentsBox{
+  border: #212529;
+  margin-right: auto;
+  margin-top: 20px;
+  box-shadow: #254C58 1px 0px;
+  border: #3C7D91 5px double;
+  padding: 10px 10px 10px 10px;
+  overflow-y: scroll;
+  max-height: 433px;
+
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
